# DiffLiB

./: README.md  pyproject.toml
examples/forward/: main.py
examples/forward/input/: pybamm_data.npy  pybamm_data.pkl
examples/gradient/: main.py
examples/gradients/: main.py
src/cmsl/difflib/: __init__.py  core.py  mesh.py  micro.py  models.py  para.py  prep.py  wrap.py
src/cmsl/difflib/experimental/: __init__.py
